[gd_scene load_steps=3 format=3 uid="uid://rpx15l2fbu2o"]

[ext_resource type="Script" uid="uid://c8pf5vu8okw3a" path="res://addons/cyclops_level_builder/gui/keymap/keymap_group_editor.gd" id="1_51m4b"]
[ext_resource type="Script" uid="uid://bv3rt2x7fy6al" path="res://addons/cyclops_level_builder/gui/docks/cyclops_console/keymap_editor/keymap_tree_control.gd" id="2_wy8dh"]

[node name="KeymapGroupEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51m4b")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 600

[node name="Tree" type="Tree" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 5
column_titles_visible = true
drop_mode_flags = 3
script = ExtResource("2_wy8dh")

[node name="extra_properties" type="PanelContainer" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="param_grid" type="GridContainer" parent="HSplitContainer/extra_properties"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="popup_actions" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(131, 100)
item_count = 3
item_0/text = "Add keymap"
item_0/id = 0
item_1/text = "Add group"
item_1/id = 1
item_2/text = "Remove Item"
item_2/id = 2

[node name="PopupMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 2
item_0/text = "alpha"
item_0/id = 0
item_1/text = "beta"
item_1/id = 1

[connection signal="cell_selected" from="HSplitContainer/Tree" to="." method="_on_tree_cell_selected"]
[connection signal="custom_item_clicked" from="HSplitContainer/Tree" to="." method="_on_tree_custom_item_clicked"]
[connection signal="drop_tree_item" from="HSplitContainer/Tree" to="." method="_on_tree_drop_tree_item"]
[connection signal="empty_clicked" from="HSplitContainer/Tree" to="." method="_on_tree_empty_clicked"]
[connection signal="gui_input" from="HSplitContainer/Tree" to="." method="_on_tree_gui_input"]
[connection signal="item_edited" from="HSplitContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="item_mouse_selected" from="HSplitContainer/Tree" to="." method="_on_tree_item_mouse_selected"]
[connection signal="item_selected" from="HSplitContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="id_pressed" from="popup_actions" to="." method="_on_popup_actions_id_pressed"]
